@@ -130,6 +130,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [ConfigS] Renamed ReloadConfigFromJSON API to SetConfigFromJSON
   * [CDRs] Replaced RSRField with RSRParser
   * [RouteS] Add new field RouteRateProfileIDs in RateProfiles.csv
+  * [DispatcherS] Removed connection pool from DispatcherHost structure
   
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
